[package]
name = "xor_cryptor_keylen"
version = "2.0.4"
edition = "2021"
authors = ["Shashank Verma <shank03>", "Jux <JuxGD>"]
license = "MIT"
description = "xor_cryptor, but with a minimum key length of 1"
repository = "https://github.com/JuxGD/xor_cryptor_keylen"
readme = "README.md"
keywords = ["xor", "cryptor", "encryption", "decryption", "cipher"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.9.0"
